archive/welcome/students/k8s/lecturer/yaniv/DELL/chris_simonson/ingress/service.yaml
apiVersion: v1     
kind: Service
metadata:
  name: bear-svc # Name of the service
spec:
  selector:
    app: bear    # Run on any pod(s) with label - app: myapp
  ports:          # Map incoming port to target port
  - name: bear-svc    # Setting multiple ports listterns 
    protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
---
apiVersion: v1     
kind: Service
metadata:
  name: moose-svc # Name of the service
spec:
  selector:
    app: moose    # Run on any pod(s) with label - app: myapp
  ports:          # Map incoming port to target port
  - name: moose-svc    # Setting multiple ports listterns 
    protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
